directories updated
